<resources>
    <string name="app_name">Charity Authority</string>

    //api information
    <string name="base_url">https://charityright.com.bd/crprojectadmin/</string>
    <string name="google_cloud_key" translatable="false">AIzaSyD5oBED8kdIQHXQmiCMNutligiPmHz6P-g</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_the_email_you_signed_up_with_and_we_will_send_you_a_new_password">Enter the email you signed up with and we will send you a new password.</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="add_school">Add Project</string>
    <string name="notifications">Notifications</string>
    <string name="update_student">Student List</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="report_download">Report Download</string>
    <string name="download_pdf">Download PDF</string>
    <string name="zone">Zone</string>
    <string name="add_campaign">Add Campaign</string>
    <string name="campaign_list">Campaign List</string>
    <string name="campaign_name">Campaign Name</string>
    <string name="campaign_date">Campaign Date</string>
    <string name="campaign_location">Campaign Location</string>
    <string name="description">Description</string>
    <string name="campaign_objective">Campaign Objective</string>
    <string name="campaign_beneficiary">Campaign Beneficiary</string>
    <string name="moderator_name">Moderator Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="photo_upload">Photo Upload</string>
    <string name="submit">Submit</string>
    <string name="objective">Objective</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="running_campaign">Running Campaign</string>
    <string name="total_donation_report">Total Donation Report</string>
    <string name="total_student">Total Student</string>
    <string name="auditor_reports">Auditor Reports</string>
    <string name="total_donor">Total Donor</string>
    <string name="total_school_madrasha_orphanage">Total Project</string>
    <string name="school_name">School Name</string>
    <string name="address">Address</string>
    <string name="add_class">Add Class</string>
    <string name="add_new">Add Class</string>
    <string name="class_list">Class List</string>
    <string name="total_donation">Total Donation :</string>
    <string name="donor_list">Donor List</string>
    <string name="account_information">Account Information</string>
    <string name="email_tv">Email :</string>
    <string name="phone">Phone :</string>
    <string name="address_tv">Address :</string>
    <string name="post_code">Post Code :</string>
    <string name="country">Country :</string>
    <string name="project_name">Project Name</string>
    <string name="auditor_name">Auditor Name</string>
    <string name="submit_report">Submit Report</string>
    <string name="pending_report">Pending Report</string>
    <string name="view_all_auditor">View All Auditor</string>
    <string name="action">Action</string>
    <string name="school_list">Project List</string>
    <string name="student_list">Student List</string>
    <string name="edit">Edit</string>
    <string name="class_name">Class Name</string>
    <string name="student_name">Student Name</string>
    <string name="donor_name">Donor Name</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="time">Time</string>
    <string name="filed_visit_form">Field Visit Form</string>
    <string name="attendance_picture_upload">Attendance Picture Upload</string>
    <string name="upload_pictures">Upload Pictures</string>
    <string name="present">Total Present</string>
    <string name="absent">Total Absent</string>
    <string name="reason_of_absence">Reason Of Absence</string>
    <string name="average_age_of_children">Average Age of Children</string>
    <string name="education_level">Education Level</string>
    <string name="academic_performance">Academic Performance</string>
    <string name="efficiency_in_other_aspects">Efficiency in Other Aspects</string>
    <string name="nutrition_information">Nutrition Information</string>
    <string name="approx_meal_price">Approx. Meal Price</string>
    <string name="meal_quality">Average Food Quality</string>
    <string name="good">Good</string>
    <string name="suggest_improvement_if_any">Suggest Improvement (If Any)</string>
    <string name="suggest_improvement">Suggest Improvement</string>
    <string name="foundation">Foundation</string>
    <string name="teacher">Teacher</string>
    <string name="food">Food</string>
    <string name="education">Education</string>
    <string name="visitors">Visitors</string>
    <string name="group">Group</string>
    <string name="video_upload_if_any">Video Upload (If Any)</string>
    <string name="upload_video">Upload Video</string>
    <string name="remarks_comments">Remarks / Comments</string>
    <string name="auditor_signature_upload">Auditor Signature Upload</string>
    <string name="teacher_signature_upload">Teacher Signature Upload</string>
    <string name="special_circumstance_report">Special Circumstance Report</string>
    <string name="location">Location</string>
    <string name="what_is_the_incident">What is the Incident ?</string>
    <string name="affected_area">Affected Area</string>
    <string name="current_situation_of_beneficiaries">Current Situation of Beneficiaries</string>
    <string name="what_support_required">What Support Required ?</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="field_visit_form">Field Visit Form</string>
    <string name="assign_report">Assign Report</string>
    <string name="beneficiary_remarks_form">Beneficiary Remarks Form</string>
    <string name="project_beneficiary_remarks">Project Beneficiary Remarks</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="additional_information">Additional Information</string>
    <string name="site_field_visit_form">Site/Field Visit Form</string>
    <string name="admin">Admin</string>
    <string name="auditor">Auditor</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="welcome_to_admin_dashboard">Welcome To Admin Dashboard</string>
    <string name="school_donation">School Donation</string>
    <string name="campaign_donation">Campaign Donation</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="add_nutrition_information">Nutrition / Food Information</string>
    <string name="nutrition_type">Nutrition / Food</string>
    <string name="add_nutrition">Add Nutrition</string>
    <string name="better">Better</string>
    <string name="best">Best</string>
    <string name="picture_category">Picture Category</string>
    <string name="food_amp_kitchen_picture"><![CDATA[Food & Kitchen Picture]]></string>
    <string name="class_education">Class Education Picture</string>
    <string name="dining_picture">Dining Picture</string>
    <string name="attendance_sheet_picture">Attendance Sheet Picture</string>
    <string name="group_play_time_picture">Group/Play Time Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="milk">Milk</string>

</resources>