<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".auditor.fragments.NotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|center"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/notifications"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/site_field_visit_form"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_12sdp"
                android:gravity="start|center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zone"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="start|center" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/school_name"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="end|center" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/field_visit_item"/>

            <LinearLayout
                android:id="@+id/noDataLayout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/confirmBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:layout_gravity="center"
                    app:lottie_rawRes="@raw/no_data"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>