<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auditor.fragments.SpecialCircumstanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOnPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="start|center"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/special_circumstance_report"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:gravity="start|center" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/location"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"/>
        <EditText
            android:id="@+id/locationET"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/location"
            android:drawableEnd="@drawable/ic_location"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/date"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"/>
        <EditText
            android:id="@+id/dateET"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:focusable="false"
            android:background="@drawable/edit_text_background"
            android:hint="@string/date"
            android:drawableEnd="@drawable/ic_calendar"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/what_is_the_incident"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"/>
        <EditText
            android:id="@+id/incidentET"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/what_is_the_incident"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/affected_area"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"/>
        <EditText
            android:id="@+id/affectedET"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/affected_area"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/current_situation_of_beneficiaries"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"/>
        <EditText
            android:id="@+id/situationET"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/current_situation_of_beneficiaries"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/what_support_required"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"/>
        <EditText
            android:id="@+id/supportET"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/what_support_required"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/remarks_comments"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"/>
        <EditText
            android:id="@+id/remarksET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/remarks_comments"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:lines="3"
            android:maxLines="4"
            android:gravity="top|start"
            android:textSize="@dimen/_11sdp"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_15sdp"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/colorPrimary"
            android:letterSpacing="0"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"/>

    </LinearLayout>

</ScrollView>